fix bug in footertest

--- a/test-output/old/ApplaudoTechnicalExam/methods-alphabetical.html
+++ b/test-output/old/ApplaudoTechnicalExam/methods-alphabetical.html
@@ -1,22 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>ApplaudoTechnicalExam</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fc37a">  <td>21/07/30 15:01:22</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;FeatureTest.afterSuite()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@233fe9b6]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2003824358</td>   <td></td> </tr>
-<tr bgcolor="7fc37a">  <td>21/07/30 15:01:05</td>   <td>-17124</td> <td>&nbsp;</td><td title="&gt;&gt;FeatureTest.beforeSuite()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@233fe9b6]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2003824358</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/07/30 15:01:22</td>   <td>-29</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchBoxTest.beforeSuite()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@14d3bc22]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2003824358</td>   <td></td> </tr>
-<tr bgcolor="c7b4de">  <td>21/07/30 15:01:15</td>   <td>-7331</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTest.testAddItemToShoppingCart()[pri:0, instance:com.WebPage.FeatureTest.ShoppingCartTest@11a9e7c8]">testAddItemToShoppingCart</td> 
-  <td>TestNG-tests-1@2003824358</td>   <td></td> </tr>
-<tr bgcolor="6faea6">  <td>21/07/30 15:01:05</td>   <td>-17102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CharacterTest.testGetAllCharacters()[pri:0, instance:com.BreakingBadAPI.EndpointTest.CharacterTest@1f0f1111]">testGetAllCharacters</td> 
-  <td>TestNG-tests-2@1573286890</td>   <td></td> </tr>
-<tr bgcolor="6faea6">  <td>21/07/30 15:01:13</td>   <td>-9247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CharacterTest.testGetCharacterByName()[pri:0, instance:com.BreakingBadAPI.EndpointTest.CharacterTest@1f0f1111]">testGetCharacterByName</td> 
-  <td>TestNG-tests-2@1573286890</td>   <td></td> </tr>
-<tr bgcolor="c7b4de">  <td>21/07/30 15:01:15</td>   <td>-7300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShoppingCartTest.testRemoveItemFromShoppingCart()[pri:0, instance:com.WebPage.FeatureTest.ShoppingCartTest@11a9e7c8]">testRemoveItemFromShoppingCart</td> 
-  <td>TestNG-tests-1@2003824358</td>   <td></td> </tr>
-<tr bgcolor="cfa8b7">  <td>21/07/30 15:01:22</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBoxTest.testSearchBox()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@14d3bc22]">testSearchBox</td> 
-  <td>TestNG-tests-1@2003824358</td>   <td></td> </tr>
-<tr bgcolor="6aad6c">  <td>21/07/30 15:01:10</td>   <td>-12422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTest.validateFooterInformation()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@233fe9b6]">validateFooterInformation</td> 
-  <td>TestNG-tests-1@2003824358</td>   <td></td> </tr>
+<tr bgcolor="cbb9b1">  <td>21/07/30 17:10:40</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;FeatureTest.afterSuite()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@5bfa9431]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@7069908</td>   <td></td> </tr>
+<tr bgcolor="cbb9b1">  <td>21/07/30 17:10:25</td>   <td>-14670</td> <td>&nbsp;</td><td title="&gt;&gt;FeatureTest.beforeSuite()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@5bfa9431]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@7069908</td>   <td></td> </tr>
+<tr bgcolor="e9b5a8">  <td>21/07/30 17:10:25</td>   <td>-14649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CharacterTest.testGetAllCharacters()[pri:0, instance:com.BreakingBadAPI.EndpointTest.CharacterTest@6ac13091]">testGetAllCharacters</td> 
+  <td>TestNG-tests-2@305833051</td>   <td></td> </tr>
+<tr bgcolor="e9b5a8">  <td>21/07/30 17:10:33</td>   <td>-7133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CharacterTest.testGetCharacterByName()[pri:0, instance:com.BreakingBadAPI.EndpointTest.CharacterTest@6ac13091]">testGetCharacterByName</td> 
+  <td>TestNG-tests-2@305833051</td>   <td></td> </tr>
+<tr bgcolor="6aad6c">  <td>21/07/30 17:10:40</td>   <td>-214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTest.validateFooterInformation()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@5bfa9431]">validateFooterInformation</td> 
+  <td>TestNG-tests-1@7069908</td>   <td></td> </tr>
 </table>
