--- a/test-output/old/ApplaudoTechnicalExam/reporter-output.html
+++ b/test-output/old/ApplaudoTechnicalExam/reporter-output.html
@@ -1,4 +1,26 @@
-<h2>Reporter output</h2><table><tr><td>Page has no footer information</td></tr>
-<tr><td>Element doesn't exist</td></tr>
-<tr><td>Element didn't load correctly</td></tr>
+<h2>Reporter output</h2><table><tr><td>[INFORMATION ON FOOTER:] Store information
+Selenium Framework, Research Triangle Park, North Carolina, USA
+Call us now: (347) 466-7432
+Email: support@seleniumframework.com
+
+</td></tr>
+<tr><td>[EXPECTED INFORMATION VALUES:] Store information
+Selenium Framework, Research Triangle Park, North Carolina, USA
+
+</td></tr>
+<tr><td>[COMPARISON RESULT:] true
+
+</td></tr>
+<tr><td>[EXPECTED INFORMATION VALUES:] Call us now: (347) 466-7432
+
+</td></tr>
+<tr><td>[COMPARISON RESULT:] true
+
+</td></tr>
+<tr><td>[EXPECTED INFORMATION VALUES:] Email: support@seleniumframework.com
+
+</td></tr>
+<tr><td>[COMPARISON RESULT:] true
+
+</td></tr>
 </table>
