--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cbb9b1">  <td>21/07/30 13:01:50</td>   <td>0</td> <td title="&lt;&lt;FeatureTest.afterSuite()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@3b07a0d6]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1773283386</td>   <td></td> </tr>
-<tr bgcolor="6aad6c">  <td>21/07/30 13:00:52</td>   <td>-58838</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchBoxTest.beforeClass()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@3b07a0d6]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1773283386</td>   <td></td> </tr>
-<tr bgcolor="cbb9b1">  <td>21/07/30 13:00:05</td>   <td>-105073</td> <td title="&gt;&gt;FeatureTest.beforeSuite()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@3b07a0d6]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1773283386</td>   <td></td> </tr>
-<tr bgcolor="6aad6c">  <td>21/07/30 13:01:00</td>   <td>-50071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBoxTest.testSearchBox()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@3b07a0d6]">testSearchBox</td> 
-  <td>main@1773283386</td>   <td></td> </tr>
+<tr bgcolor="cbb9b1">  <td>21/07/30 17:08:53</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;FeatureTest.afterSuite()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@5bfa9431]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@581318631</td>   <td></td> </tr>
+<tr bgcolor="cbb9b1">  <td>21/07/30 17:08:37</td>   <td>-16380</td> <td>&nbsp;</td><td title="&gt;&gt;FeatureTest.beforeSuite()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@5bfa9431]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@581318631</td>   <td></td> </tr>
+<tr bgcolor="6aad6c">  <td>21/07/30 17:08:53</td>   <td>-173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTest.validateFooterInformation()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@5bfa9431]">validateFooterInformation</td> 
+  <td>main@581318631</td>   <td></td> </tr>
 </table>
