--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,33 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">ApplaudoTechnicalExam</th></tr>
-<tr><td><a href="#t0">EndpointTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,642</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">WebPageTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">14,986</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">23,628</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">EndpointTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,706</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">WebPageTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">26,894</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">35,600</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">ApplaudoTechnicalExam</th></tr></tbody><tbody id="t0"><tr><th colspan="4">EndpointTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.BreakingBadAPI.EndpointTest.CharacterTest</td><td><a href="#m0">testGetAllCharacters</a></td><td rowspan="1">1627679425717</td><td rowspan="1">7511</td></tr><tr class="passedeven"><td><a href="#m1">testGetCharacterByName</a></td><td rowspan="1">1627679433233</td><td rowspan="1">1082</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">WebPageTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.WebPage.FeatureTest.FooterTest</td><td><a href="#m2">validateFooterInformation</a></td><td rowspan="1">1627679440152</td><td rowspan="1">211</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">ApplaudoTechnicalExam</th></tr></tbody><tbody id="t0"><tr><th colspan="4">EndpointTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.BreakingBadAPI.EndpointTest.CharacterTest</td><td><a href="#m0">testGetAllCharacters</a></td><td rowspan="1">1627680125879</td><td rowspan="1">7445</td></tr><tr class="passedeven"><td><a href="#m1">testGetCharacterByName</a></td><td rowspan="1">1627680133332</td><td rowspan="1">1196</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">WebPageTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.WebPage.FeatureTest.SearchBoxTest</td><td><a href="#m2">testSearchBox</a></td><td rowspan="1">1627680139838</td><td rowspan="1">12681</td></tr></tbody>
 </table>
 <h2>EndpointTest</h2><h3 id="m0">com.BreakingBadAPI.EndpointTest.CharacterTest#testGetAllCharacters</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.BreakingBadAPI.EndpointTest.CharacterTest#testGetCharacterByName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>WebPageTest</h2><h3 id="m2">com.WebPage.FeatureTest.FooterTest#validateFooterInformation</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFORMATION ON FOOTER:] Store information
-Selenium Framework, Research Triangle Park, North Carolina, USA
-Call us now: (347) 466-7432
-Email: support@seleniumframework.com
-
-<br/>[EXPECTED INFORMATION VALUES:] Store information
-Selenium Framework, Research Triangle Park, North Carolina, USA
-
-<br/>[COMPARISON RESULT:] true
-
-<br/>[EXPECTED INFORMATION VALUES:] Call us now: (347) 466-7432
-
-<br/>[COMPARISON RESULT:] true
-
-<br/>[EXPECTED INFORMATION VALUES:] Email: support@seleniumframework.com
-
-<br/>[COMPARISON RESULT:] true
-
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>WebPageTest</h2><h3 id="m2">com.WebPage.FeatureTest.SearchBoxTest#testSearchBox</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[ERROR:] Page confirmed there was no result found</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
