--- a/test-output/index.html
+++ b/test-output/index.html
@@ -114,7 +114,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-ApplaudoTechnicalExam" title="com.WebPage.FeatureTest.FooterTest" class="method navigator-link" hash-for-method="validateFooterInformation">validateFooterInformation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-ApplaudoTechnicalExam" title="com.WebPage.FeatureTest.SearchBoxTest" class="method navigator-link" hash-for-method="testSearchBox">testSearchBox</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-ApplaudoTechnicalExam -->
@@ -154,14 +154,14 @@
           <div class="suite-ApplaudoTechnicalExam-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.WebPage.FeatureTest.FooterTest</span>
+              <span class="class-name">com.WebPage.FeatureTest.SearchBoxTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="validateFooterInformation">
-                  </a> <!-- validateFooterInformation -->
-                  <span class="method-name">validateFooterInformation</span>
+                  <a name="testSearchBox">
+                  </a> <!-- testSearchBox -->
+                  <span class="method-name">testSearchBox</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -178,7 +178,7 @@
 &lt;suite parallel=&quot;tests&quot; name=&quot;ApplaudoTechnicalExam&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;WebPageTest&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.WebPage.FeatureTest.FooterTest&quot;/&gt;
+      &lt;class name=&quot;com.WebPage.FeatureTest.SearchBoxTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- WebPageTest --&gt;
   &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;EndpointTest&quot;&gt;
@@ -228,22 +228,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testGetAllCharacters')
-data.setCell(0, 2, 'com.BreakingBadAPI.EndpointTest.CharacterTest')
-data.setCell(0, 3, 7511);
+data.setCell(0, 1, 'testSearchBox')
+data.setCell(0, 2, 'com.WebPage.FeatureTest.SearchBoxTest')
+data.setCell(0, 3, 12681);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testGetCharacterByName')
+data.setCell(1, 1, 'testGetAllCharacters')
 data.setCell(1, 2, 'com.BreakingBadAPI.EndpointTest.CharacterTest')
-data.setCell(1, 3, 1082);
+data.setCell(1, 3, 7445);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'validateFooterInformation')
-data.setCell(2, 2, 'com.WebPage.FeatureTest.FooterTest')
-data.setCell(2, 3, 211);
+data.setCell(2, 1, 'testGetCharacterByName')
+data.setCell(2, 2, 'com.BreakingBadAPI.EndpointTest.CharacterTest')
+data.setCell(2, 3, 1196);
 window.suiteTableData['ApplaudoTechnicalExam']= { tableData: data, tableDiv: 'times-div-ApplaudoTechnicalExam'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
+              <span class="suite-total-time">Total running time: 26 seconds</span>
               <div id="times-div-ApplaudoTechnicalExam">
               </div> <!-- times-div-ApplaudoTechnicalExam -->
             </div> <!-- times-div -->
@@ -255,33 +255,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">validateFooterInformation</span>
+              <span class="reporter-method-name">testSearchBox</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFORMATION ON FOOTER:] Store information
-Selenium Framework, Research Triangle Park, North Carolina, USA
-Call us now: (347) 466-7432
-Email: support@seleniumframework.com
-
-</span>
-                <span class="reporter-method-output">[EXPECTED INFORMATION VALUES:] Store information
-Selenium Framework, Research Triangle Park, North Carolina, USA
-
-</span>
-                <span class="reporter-method-output">[COMPARISON RESULT:] true
-
-</span>
-                <span class="reporter-method-output">[EXPECTED INFORMATION VALUES:] Call us now: (347) 466-7432
-
-</span>
-                <span class="reporter-method-output">[COMPARISON RESULT:] true
-
-</span>
-                <span class="reporter-method-output">[EXPECTED INFORMATION VALUES:] Email: support@seleniumframework.com
-
-</span>
-                <span class="reporter-method-output">[COMPARISON RESULT:] true
-
-</span>
+                <span class="reporter-method-output">[ERROR:] Page confirmed there was no result found</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -299,7 +275,7 @@ Selenium Framework, Research Triangle Park, North Carolina, USA
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.WebPage.FeatureTest.FooterTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.WebPage.FeatureTest.SearchBoxTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">beforeSuite</span>
                 <span class="method-start">0 ms</span>
@@ -309,22 +285,26 @@ Selenium Framework, Research Triangle Park, North Carolina, USA
               <div class="chronological-class-name">com.BreakingBadAPI.EndpointTest.CharacterTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">testGetAllCharacters</span>
-                <span class="method-start">28 ms</span>
+                <span class="method-start">35 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testGetCharacterByName</span>
-                <span class="method-start">7544 ms</span>
+                <span class="method-start">7488 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.WebPage.FeatureTest.FooterTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.WebPage.FeatureTest.SearchBoxTest</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">beforeClass</span>
+                <span class="method-start">10725 ms</span>
+              </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">validateFooterInformation</span>
-                <span class="method-start">14463 ms</span>
+                <span class="method-name">testSearchBox</span>
+                <span class="method-start">13994 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">14677 ms</span>
+                <span class="method-start">26676 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
