--- a/test-output/old/ApplaudoTechnicalExam/classes.html
+++ b/test-output/old/ApplaudoTechnicalExam/classes.html
@@ -30,18 +30,22 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.WebPage.FeatureTest.FooterTest</td>
+<td>com.WebPage.FeatureTest.SearchBoxTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateFooterInformation</td>
+<td>testSearchBox</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>beforeClass</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
