--- a/test-output/old/ApplaudoTechnicalExam/methods.html
+++ b/test-output/old/ApplaudoTechnicalExam/methods.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>ApplaudoTechnicalExam</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cbb9b1">  <td>21/07/30 17:10:40</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;FeatureTest.afterSuite()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@5bfa9431]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@7069908</td>   <td></td> </tr>
-<tr bgcolor="cbb9b1">  <td>21/07/30 17:10:25</td>   <td>-14670</td> <td>&nbsp;</td><td title="&gt;&gt;FeatureTest.beforeSuite()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@5bfa9431]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@7069908</td>   <td></td> </tr>
-<tr bgcolor="6aad6c">  <td>21/07/30 17:10:40</td>   <td>-214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTest.validateFooterInformation()[pri:0, instance:com.WebPage.FeatureTest.FooterTest@5bfa9431]">validateFooterInformation</td> 
-  <td>TestNG-tests-1@7069908</td>   <td></td> </tr>
-<tr bgcolor="e9b5a8">  <td>21/07/30 17:10:33</td>   <td>-7133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CharacterTest.testGetCharacterByName()[pri:0, instance:com.BreakingBadAPI.EndpointTest.CharacterTest@6ac13091]">testGetCharacterByName</td> 
-  <td>TestNG-tests-2@305833051</td>   <td></td> </tr>
-<tr bgcolor="e9b5a8">  <td>21/07/30 17:10:25</td>   <td>-14649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CharacterTest.testGetAllCharacters()[pri:0, instance:com.BreakingBadAPI.EndpointTest.CharacterTest@6ac13091]">testGetAllCharacters</td> 
-  <td>TestNG-tests-2@305833051</td>   <td></td> </tr>
+<tr bgcolor="6aad6c">  <td>21/07/30 17:22:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchBoxTest.testSearchBox()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@38c5cc4c]">testSearchBox</td> 
+  <td>TestNG-tests-1@504284606</td>   <td></td> </tr>
+<tr bgcolor="cbb9b1">  <td>21/07/30 17:22:32</td>   <td>12684</td> <td>&nbsp;</td><td title="&lt;&lt;FeatureTest.afterSuite()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@38c5cc4c]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@504284606</td>   <td></td> </tr>
+<tr bgcolor="6aad6c">  <td>21/07/30 17:22:16</td>   <td>-3269</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchBoxTest.beforeClass()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@38c5cc4c]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@504284606</td>   <td></td> </tr>
+<tr bgcolor="cbb9b1">  <td>21/07/30 17:22:05</td>   <td>-13987</td> <td>&nbsp;</td><td title="&gt;&gt;FeatureTest.beforeSuite()[pri:0, instance:com.WebPage.FeatureTest.SearchBoxTest@38c5cc4c]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@504284606</td>   <td></td> </tr>
+<tr bgcolor="c19091">  <td>21/07/30 17:22:05</td>   <td>-13959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CharacterTest.testGetAllCharacters()[pri:0, instance:com.BreakingBadAPI.EndpointTest.CharacterTest@75329a49]">testGetAllCharacters</td> 
+  <td>TestNG-tests-2@421321311</td>   <td></td> </tr>
+<tr bgcolor="c19091">  <td>21/07/30 17:22:13</td>   <td>-6506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CharacterTest.testGetCharacterByName()[pri:0, instance:com.BreakingBadAPI.EndpointTest.CharacterTest@75329a49]">testGetCharacterByName</td> 
+  <td>TestNG-tests-2@421321311</td>   <td></td> </tr>
 </table>
